@@ -49,6 +49,7 @@
 * Worldpay: Fix stored credentials issue [jherreraa] #5267
 * StripePI: Update authorization for failed Payment Intents [almalee24] #5260
 * Worldpay: Add support for recurring Apple Pay [kenderbolivart] #5628
+* Cybersource Rest: Add support for recurring Apple Pay [bdcano] #5270
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
